add_executable(OMNI-GRID_EXAMPLES_FRAMEWORK "HelloFramework.cpp")

target_link_libraries(OMNI-GRID_EXAMPLES_FRAMEWORK PRIVATE
    OMNI-GRID
)

set_target_properties(OMNI-GRID_EXAMPLES_FRAMEWORK PROPERTIES OUTPUT_NAME "HelloFramework")

Install(TARGETS OMNI-GRID_EXAMPLES_FRAMEWORK
    LIBRARY DESTINATION examples/framework
    ARCHIVE DESTINATION examples/framework
    RUNTIME DESTINATION examples/framework)

install(FILES $<TARGET_RUNTIME_DLLS:OMNI-GRID_EXAMPLES_FRAMEWORK> DESTINATION examples/framework)

add_executable(OMNI-GRID_EXAMPLES_FRAMEWORK_LIBRARIES "HelloFrameworkLibs.cpp")

target_link_libraries(OMNI-GRID_EXAMPLES_FRAMEWORK_LIBRARIES PRIVATE
    OMNI-GRID
)

set_target_properties(OMNI-GRID_EXAMPLES_FRAMEWORK_LIBRARIES PROPERTIES OUTPUT_NAME "HelloFrameworkLibs")

Install(TARGETS OMNI-GRID_EXAMPLES_FRAMEWORK_LIBRARIES
    LIBRARY DESTINATION examples/framework
    ARCHIVE DESTINATION examples/framework
    RUNTIME DESTINATION examples/framework)

install(FILES $<TARGET_RUNTIME_DLLS:OMNI-GRID_EXAMPLES_FRAMEWORK_LIBRARIES> DESTINATION examples/framework)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    install(FILES ${GTK_DLL_DEBUG_FILES} DESTINATION examples/framework)
    install(FILES ${RAYLIB_DLL_DEBUG_FILES} DESTINATION examples/framework)
    install(FILES ${BOOST_PYTHON_DLL_DEBUG_FILES} DESTINATION examples/framework)
elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
    install(FILES ${GTK_DLL_RELEASE_FILES} DESTINATION examples/framework)
    install(FILES ${RAYLIB_DLL_RELEASE_FILES} DESTINATION examples/framework)
    install(FILES ${BOOST_PYTHON_DLL_RELEASE_FILES} DESTINATION examples/framework)
endif()

if(${VERBOSE})
    message(STATUS "FRAMEWORK EXAMPLES ADDED.")
endif()